# vpinball

./: .clang-format  .cvsignore  .gitignore  AboutDialog.cpp  AboutDialog.h  Accelerometer_Velocity_Input_Tech_Note.md  Accelerometer_Velocity_Input_User_Guide.md  BlackBox.cpp  BlackBox.h  CMakeLists.txt  CONTRIBUTING.md  Changelog.txt  CommandReference.txt  CrashHandler.cpp  CrashHandler.h  Debugger.cpp  Debugger.h  DongleAPI.h  DongleAPI.lib  DrawingOrderDialog.cpp  FreeImage.lib  ImageDialog.cpp  ImageDialog.h  IndexBuffer.cpp  IndexBuffer.h  LICENSE  LiveUI.cpp  LiveUI.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MaterialDialog.cpp  MemoryStatus.cpp  MemoryStatus.h  MeshBuffer.cpp  MeshBuffer.h  Open Pinball Device User Guide.md  Plunger_Velocity_Input_Tech_Note.md  Plunger_Velocity_Input_User_Guide.md  (+375 more)
User/: VPReg.stg
_UpgradeReport_Files/: Thumbs.db
cmake/: CMakeLists_bgfx-win-x64.txt  CMakeLists_bgfx-win-x86.txt  CMakeLists_gl-linux-arm64.txt  CMakeLists_gl-linux-x64.txt  CMakeLists_gl-osx-x64.txt  CMakeLists_gl-win-x64.txt  CMakeLists_gl-win-x86.txt  CMakeLists_win-x64.txt  CMakeLists_win-x86.txt
dialogs/: AboutDialog.cpp  AboutDialog.h  AudioOptionsDialog.cpp  AudioOptionsDialog.h  CollectionManagerDialog.cpp  CollectionManagerDialog.h  DimensionDialog.cpp  DimensionDialog.h  DrawingOrderDialog.cpp  DrawingOrderDialog.h  EditorOptionsDialog.cpp  EditorOptionsDialog.h  ImageDialog.cpp  ImageDialog.h  KeysConfigDialog.cpp  KeysConfigDialog.h  LayersListDialog.cpp  LayersListDialog.h  MaterialDialog.cpp  MaterialDialog.h  NotesDialog.cpp  NotesDialog.h  PhysicsOptionsDialog.cpp  PhysicsOptionsDialog.h  ProtectTableDialog.cpp  ProtectTableDialog.h  RenderProbeDialog.cpp  RenderProbeDialog.h  ScriptErrorDialog.cpp  ScriptErrorDialog.h  SearchSelectDialog.cpp  SearchSelectDialog.h  SoundDialog.cpp  SoundDialog.h  TableInfoDialog.cpp  TableInfoDialog.h  ToolbarDialog.cpp  ToolbarDialog.h  VROptionsDialog.cpp  VROptionsDialog.h  (+2 more)
docs/: Accelerometer Velocity Input Tech Note.md  Accelerometer Velocity Input User Guide.md  Build Differences.md  Changelog.txt  Changelog_Scripts.txt  Command Line.md  CommandLineParameters.txt  CommandReference.txt  FileLayout.md  Hotkeys.txt  JP's VPX7 Rev3 Table physics.vpp  JP's VPX7 Rev3 script addons vbs.txt  JP's VPX8 Rev3.1 Physics Materials.mat  JP's VPX8 Rev3.1 Table physics.vpp  JP's VPX8 Rev3.1 script addons vbs.txt  Latency.md  Lights.md  LiveUI.md  Open Pinball Device User Guide.md  PhysicValues.txt  Plunger Velocity Input Tech Note.md  Plunger Velocity Input User Guide.md  README.md  RegistryKeys.txt  Script API Reference.md  Scripts.txt  SharedMemoryAPI.ods  SharedMemoryAPI.txt  Stereo.md  Upgrading Table 10.8.1.md  Upgrading Table 10.8.md  View Setup.md  license.txt  multipleFullscreen.c
glshader/: BallShader.glfx  BasicShader.glfx  ClassicLightShader.glfx  DMDShader.glfx  DMDShaderVR.glfx  FBShader.glfx  FXAAStereoAO.fxh  FXAAStereoAO_GL.fxh  FlasherShader.glfx  Helpers.fxh  Helpers_GL.fxh  LightShader.glfx  Material.fxh  SMAA.glfx  SMAA.hlsl  SSR.fxh  StereoShader.glfx  hlsl_glsl.fxh
images/: thumbs.db
imgui/: ImGuizmo.cpp  ImGuizmo.h  imconfig.h  imgui.cpp  imgui.patch  imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  imgui_impl_win32.h  imgui_stdlib.cpp  imgui_tables.cpp  imgui_widgets.cpp
inc/: SString.h  ThreadPool.h  activdbg.h  activscp.h  bass.h  d3dtypes.h  dbgprop.h  droidsans.h  face.py  forsyth.h  freeimage.h  gpuprofiler.cpp  gpuprofiler.h  hidusage.h  miniz.c  miniz.h  nvapi.h  nvapi_lite_common.h  nvapi_lite_d3dext.h  nvapi_lite_salend.h  nvapi_lite_salstart.h  nvapi_lite_sli.h  nvapi_lite_stereo.h  nvapi_lite_surround.h  pintable.cpp  progmesh.cpp  progmesh.h  progmesh_vecmatquat_minimal.h  rapidxml.hpp  rapidxml_print.hpp  scalefx.h  scilexer.h  serial.cpp  serial.h  sse2neon.h
lib/: FreeImage.lib  SciLexer.lib  Scintilla.lib  bass.lib  dbghelp.lib  jpeg.lib  nvapi.lib  scinlib.lib  scinlib2.lib  scinlibr.lib  wmaudsdk.lib  xa_dsound_output.lib  xanalyze.lib
make/: CMakeLists_bgfx-linux-aarch64.txt  CMakeLists_bgfx-linux-x64.txt  CMakeLists_bgfx-macos-arm64.txt  CMakeLists_bgfx-macos-x64.txt  CMakeLists_bgfx-win-x64.txt  CMakeLists_bgfx-win-x86.txt  CMakeLists_bgfx-windows-mingw-x64.txt  CMakeLists_bgfx-windows-x64.txt  CMakeLists_bgfx-windows-x86.txt  CMakeLists_bgfx_lib.txt  CMakeLists_common.txt  CMakeLists_common_standalone.txt  CMakeLists_dx9-win-x64.txt  CMakeLists_dx9-win-x86.txt  CMakeLists_dx9-windows-x64.txt  CMakeLists_dx9-windows-x86.txt  CMakeLists_gl-linux-aarch64.txt  CMakeLists_gl-linux-x64.txt  CMakeLists_gl-macos-arm64.txt  CMakeLists_gl-macos-x64.txt  CMakeLists_gl-win-x64.txt  CMakeLists_gl-win-x86.txt  CMakeLists_gl-windows-x64.txt  CMakeLists_gl-windows-x86.txt  CMakeLists_plugin_AlphaDMD.txt  CMakeLists_plugin_AltSound.txt  CMakeLists_plugin_B2S.txt  CMakeLists_plugin_B2SLegacy.txt  CMakeLists_plugin_DMDUtil.txt  CMakeLists_plugin_DOF.txt  CMakeLists_plugin_FlexDMD.txt  CMakeLists_plugin_HelloScript.txt  CMakeLists_plugin_HelloWorld.txt  CMakeLists_plugin_Inspector.txt  CMakeLists_plugin_PUP.txt  CMakeLists_plugin_PinMAME.txt  CMakeLists_plugin_PinMame.txt  CMakeLists_plugin_PinupEvents.txt  CMakeLists_plugin_RemoteControl.txt  CMakeLists_plugin_ScoreView.txt  (+81 more)
math/: bbox.h  bluenoise.h  math.cpp  math.h  matrix.cpp  matrix.h  vector.h
media/: asferr.h  fileio.cpp  fileio.h  lzwreader.cpp  lzwreader.h  lzwwriter.cpp  lzwwriter.h  mktags  nserror.h  simpleplayer.cpp  simpleplayer.h  slm.ini  wavread.cpp  wavread.h  wmaudiosdk.h
meshes/: ballMesh.h  bulbLightMesh.h  bulbSocketMesh.h  bumperBaseMesh.h  bumperCapMesh.h  bumperRingMesh.h  bumperSocketMesh.h  dropTargetT2Mesh.h  dropTargetT3Mesh.h  dropTargetT4Mesh.h  flipperBase.h  gateBracketMesh.h  gateLongPlateMesh.h  gatePlateMesh.h  gateWireMesh.h  gateWireRectangleMesh.h  hitTargetFatRectangleMesh.h  hitTargetFatSquareMesh.h  hitTargetRectangleMesh.h  hitTargetRoundMesh.h  hitTargetT1SlimMesh.h  (+15 more)
standalone/macos-x64/freeimage/: CMakeLists.txt  Makefile.macos  PluginEXR.cpp
(+2754 files in other folders)
